修改序列化相关

--- a/UnityRuntime/FlowScript.UnityRuntime.asmdef
+++ b/UnityRuntime/FlowScript.UnityRuntime.asmdef
@@ -2,6 +2,8 @@
     "name": "FlowScript.UnityRuntime",
     "rootNamespace": "",
     "references": [
+        "Serialization.Runtime",
+        "Serialization.UJson",
         "FlowScript.Runtime"
     ],
     "includePlatforms": [],
