--- a/Runtime/FlowScript.Runtime.asmdef
+++ b/Runtime/FlowScript.Runtime.asmdef
@@ -1,13 +1,13 @@
 {
     "name": "FlowScript.Runtime",
-    "rootNamespace": "FlowScript",
+    "rootNamespace": "",
     "references": [],
     "includePlatforms": [],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
     "overrideReferences": false,
     "precompiledReferences": [],
-    "autoReferenced": false,
+    "autoReferenced": true,
     "defineConstraints": [],
     "versionDefines": [],
     "noEngineReferences": true
