补充Stack逻辑，添加复制粘贴基础功能

--- a/Editor/FlowScript.Editor.asmdef
+++ b/Editor/FlowScript.Editor.asmdef
@@ -3,7 +3,9 @@
     "rootNamespace": "",
     "references": [
         "FlowScript.Runtime",
-        "FlowScript.UnityRuntime"
+        "FlowScript.UnityRuntime",
+        "Serialization.Runtime",
+        "Serialization.UJson"
     ],
     "includePlatforms": [
         "Editor"
